# Ludo

./: .gitignore  base.py  diagnostics.py  exceptions.py  game.py  main.py  pyproject.toml  requirements.txt  temp.txt  trial.py
assets/: board_4.yaml  dice_1.json  dice_1.lottie  dice_2.json  dice_3.json  dice_4.json  dice_5.json  dice_6.json  won_1st.json
data/: board_4.yaml
