[tool.flet.android]
dependencies = ['flet','certifi','pyyaml','python-dotenv']

[tool.flet.app.boot_screen]
show = true
message = "Preparing the app for its first launch…"

[tool.flet.app.startup_screen]
show = true
message = "Starting up the app…"

[project]
name = "LUDO"
version = "1.0.0"
description = "Luck is on your side."
authors = [
  {name = "Yogya Chugh", email = "yogya.developer@gmail.com"}
]